--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,94 @@ body{
     color:#191970;
     text-align:center;
 }
+
 /*Headers*/
+
 h1,h2,h3{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 35pt;
     text-align:center;
-    color:#191970
+    color:#191970;
 }
-header{
-    text-align:center;
+
+#webites {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#reviews {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#gallery {
+    border: 12px solid #191970;
+}
+
+#gallery img {
+    max-width: 100%;
+}
+
+#gallery figure {
+    text-align: center;
+}
+
+#websites {
+    border: 12px solid #191970;
+}
+
+#reviews {
+    border: 12px solid #191970;
+}
+/*Tablet Size*/
+@media screen and (min-width: 60em) {
+    figure {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    figcaption {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 4rem;
+        margin-left: 1rem;
+    }
+
+    figure img {
+        width: 100%;
+    }
+
+    #lit div {
+        max-width: 100%;
+        columns: 20rem;
+    }
+}
+
+/*Large Screen Size*/
+@media screen and (min-width: 100em){
+    #gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    hr {
+        display: none;
+    }
+
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+
+    figure {
+        display: block;
+    }
 }
